[package]
name = "cargo-gui"
version = "0.1.1"
authors = ["eignnx <eignnx@gmail.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "A browser interface for working through rustc errors and running cargo commands."

homepage = "https://github.com/eignnx/cargo-gui"
documentation = "https://github.com/eignnx/cargo-gui"
repository = "https://github.com/eignnx/cargo-gui"

keywords = ["cargo", "browser-interface", "terminal", "command-runner"]
categories = ["development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
actix-files = "0.1.7"
serde = "1.0.102"
serde_json = "1.0.41"