[package]
name = "cargo-gui"
version = "0.1.2"
authors = ["eignnx <eignnx@gmail.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"

description = "A browser interface for working through rustc errors and running cargo commands."

homepage = "https://github.com/eignnx/cargo-gui"
documentation = "https://github.com/eignnx/cargo-gui"
repository = "https://github.com/eignnx/cargo-gui"

keywords = ["cargo", "browser-interface", "terminal", "command-runner"]
categories = ["development-tools::cargo-plugins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.4.0"
tide-naive-static-files = "1.0.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.41"
async-std = { version = "1.2.0", features = ["attributes", "unstable"] }
